<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeliReport</string>
    <string name="title_section_item">Items Report</string>
    <string name="title_section_category">Categories Report</string>
    <string name="title_section_payment_type">Payment Types Report</string>
    <string name="title_section_location">Location Report</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_date_from">From: </string>
    <string name="title_date_to">To:</string>
    <string name="label_Save_button">Save Preferences</string>
    <string name="label_generate_report_button">Generate Web Report</string>
    <string name="title_category">Categories:</string>
    <string name="label_pdf_button">Create PDF</string>
    <string name="label_generate_report_dynamic">Generate Dynamic Report</string>
    <string name="label_generate_report_button_static">Generate Static report</string>

</resources>
