<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=""
    android:background="#54ededed">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/item_form_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <LinearLayout
            android:id="@+id/item_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/abc_action_bar_subtitle_text_size"
                    android:text="@string/title_date_from" />
                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"></DatePicker>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/abc_action_bar_subtitle_text_size"
                    android:text="@string/title_date_to" />
                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:foregroundGravity="right"></DatePicker>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/abc_action_bar_subtitle_text_size"
                    android:text="@string/title_category" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/button_generate_report_dynamic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_generate_report_dynamic" />
    <Button
        android:id="@+id/button_generate_report_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_generate_report_button" />

    <Button
        android:id="@+id/button_generate_report_static"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_generate_report_button_static" />


</LinearLayout>



